--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,69 @@
+# Privacy Policy
+
+## Phasmophobia No Evidence Tool
+
+**Last Updated:** March 25, 2025
+
+---
+
+## 1. Introduction
+
+Welcome to the *Phasmophobia No Evidence Tool* ("App").  
+This Privacy Policy explains how we handle your data when you use our App.  
+By using the App, you agree to the terms described in this policy.
+
+---
+
+## 2. Information We Collect
+
+This App does **not** collect, store, or share any personal information from users.
+
+However, third-party services integrated into the App, such as advertising networks, may collect anonymous data for analytics and ad personalization.
+
+---
+
+## 3. How We Use Information
+
+Since we do not collect personal data, we do not use any user information for tracking, selling, or sharing.
+
+---
+
+## 4. Advertisements
+
+The App may display third-party advertisements, such as **Unity Ads**.  
+These ad providers may collect anonymous data to show relevant ads.
+
+You can review Unity Ads’ privacy policy here:  
+👉 https://unity.com/legal/privacy-policy
+
+---
+
+## 5. Third-Party Services
+
+Our App may use third-party services that adhere to their own privacy policies. These services may include:
+
+- Unity Ads (for in-app advertisements)  
+- Google Play Services
+
+---
+
+## 6. Data Security
+
+We take reasonable steps to protect any data handled by third-party services.  
+However, as we do not collect personal data directly, we do not store or manage sensitive information.
+
+---
+
+## 7. Changes to This Privacy Policy
+
+We may update this Privacy Policy from time to time.  
+Any changes will be posted within the App or on a relevant website.
+
+---
+
+## 8. Contact Us
+
+If you have any questions or concerns about this Privacy Policy, please contact us at:
+
+📧 **brainrootcomp@gmail.com**
 
